--- a/index.html
+++ b/index.html
@@ -524,7 +524,8 @@
     </section>
 
     <footer>
-         <p class="b" style="font-family: Segoe UI, Tahoma, Arial, sans-serif; font-size: 2rem; line-height:1; letter-spacing:1px; margin:0; white-space:nowrap; padding:18px 26px; display:inline-block;" ><span style="color:#1e73be; font-style:italic; font-weight:600;font-size: 200px; transform:skewX(-5deg); display:inline-block;">THANK YOU</span></p>
+                  <span style="color:#1e73be; font-style:italic; font-weight:600;font-size: 80px; transform:skewX(-5deg); display:inline-block;">THANK YOU</span>
+
 
         <div class="container">
             <div class="footer-content fade-in">
@@ -545,5 +546,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="JS/scripts.js"></script>
 </body>
+
 
 </html>
